fixed alignment of the main container

--- a/global.css
+++ b/global.css
@@ -45,7 +45,7 @@ ol[role='list']{
   .close-cart{
     display: none;
   }
-  @media(min-width:620px){
+  @media(min-width:660px){
     .close-cart{
       display: flex;
     }
